Added stuff to learn in the README

--- a/README
+++ b/README
@@ -1,3 +1,7 @@
 Learning all about Git
 
 This repository is used to update learn all there is about Git. 
+
+Stuff I need to learn 
+
+ * rebase vs merge
