Added examples to README

--- a/README
+++ b/README
@@ -5,3 +5,9 @@ This repository is used to update learn all there is about Git.
 Stuff I need to learn 
 
  * rebase vs merge
+
+## Examples
+
+### greeter
+
+Python 'greeter' module
