Added extra things to learn in the README

--- a/README
+++ b/README
@@ -5,3 +5,6 @@ This repository is used to update learn all there is about Git.
 Stuff I need to learn 
 
  * rebase vs merge
+ * git blame
+ * git bisect
+ * staging in chunks
