--- a/README
+++ b/README
@@ -9,6 +9,9 @@ Stuff I need to learn
  * git bisect
  * staging in chunks
 
+
+Also using this repo to test my Woodhouse bot
+
 ## Examples
 
 ### greeter
